# color-noise

./: .gitignore  Haskeleton.hs  Makefile  README.md  color-noise.cabal  pinkvalues.txt  stack.yaml
benchmark/: Bench.hs  GennoiseBench.hs
executable/: Main.hs
test-suite/: GennoiseSpec.hs
