author:
    Dan Plubell
build-type:
    Simple
cabal-version:
    >= 1.10
category:
    -- TODO
    Other
copyright:
    2015 Dan Plubell <danplubell@gmail.com>
description:
    Generate noise by color
extra-source-files:
    CHANGELOG.md
    CONTRIBUTING.md
    README.md
license-file:
    LICENSE.md
license:
    MIT
maintainer:
    dplubell@cerner.com
name:
    color-noise
synopsis:
    Generate noise by color
tested-with:
    GHC == 7.8
version:
    0.0.0

library 
    build-depends:
        base ==4.*
        , wavy == 0.1.*
        , random == 1.0.1.*
        , vector == 0.10.11.*
        , bytestring == 0.10.4.*
    default-language:
        Haskell2010
    exposed-modules:
        Gennoise
    ghc-options:
        -Wall
    ghc-prof-options:
        -auto-all
        -prof
    hs-source-dirs:
        library
    other-modules:
        WhiteNoise
        , PinkVMBurk
        , PinkKellet
        , PinkIIR
executable color-noise
    build-depends:
        base
        , color-noise
    default-language:
        Haskell2010
    ghc-prof-options:
        -auto-all
        -prof
    hs-source-dirs:
        executable
    main-is:
        Main.hs

